src/snapshots/tests__fof_quantified_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
FofQuantifiedFormula {
    quantifier: Exists,
    bound: FofVariableList(
        [
            Variable(
                UpperWord(
                    "X",
                ),
            ),
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
            Variable(
                UpperWord(
                    "Z",
                ),
            ),
        ],
    ),
    formula: Unitary(
        Atomic(
            Defined(
                Plain(
                    FofDefinedPlainFormula(
                        Constant(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
