src/snapshots/tests__fof_system_term-5.snap
---
source: src/tests.rs
expression: parsed
---
Function(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "f",
                ),
            ),
        ),
    ),
    FofArguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
            Function(
                Plain(
                    Function(
                        Functor(
                            Lower(
                                LowerWord(
                                    "g",
                                ),
                            ),
                        ),
                        FofArguments(
                            [
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "Y",
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
            ),
        ],
    ),
)
