src/snapshots/tests__fof_system_term.snap
---
source: src/tests.rs
expression: parsed
---
Constant(
    SystemConstant(
        SystemFunctor(
            AtomicSystemWord(
                DollarDollarWord(
                    LowerWord(
                        "c",
                    ),
                ),
            ),
        ),
    ),
)
