src/snapshots/tests__fof_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Variable(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
