src/snapshots/tests__fof_term.snap
---
source: src/tests.rs
expression: parsed
---
Function(
    Plain(
        Function(
            Functor(
                Lower(
                    LowerWord(
                        "f",
                    ),
                ),
            ),
            FofArguments(
                [
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
