src/snapshots/tests__fof_unary_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
InfixUnary(
    FofInfixUnary {
        left: Function(
            Plain(
                Function(
                    Functor(
                        Lower(
                            LowerWord(
                                "f",
                            ),
                        ),
                    ),
                    FofArguments(
                        [
                            Variable(
                                Variable(
                                    UpperWord(
                                        "X",
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
        op: InfixInequality,
        right: Function(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
