src/snapshots/tests__fof_unary_formula.snap
---
source: src/tests.rs
expression: parsed
---
Unary(
    Not,
    Boolean(
        true,
    ),
)
