src/snapshots/tests__fof_unit_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Unary(
    Unary(
        UnaryConnective,
        Unitary(
            Atomic(
                Defined(
                    Plain(
                        FofDefinedPlainFormula(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
