src/snapshots/tests__fof_unit_formula.snap
---
source: src/tests.rs
expression: parsed
---
Unitary(
    Parenthesised(
        Unitary(
            Atomic(
                Defined(
                    Plain(
                        FofDefinedPlainFormula(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
