src/snapshots/tests__fof_unitary_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Quantified(
    Forall,
    [
        Variable(
            "X",
        ),
    ],
    Boolean(
        true,
    ),
)
