src/snapshots/tests__fof_unitary_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
Quantified(
    FofQuantifiedFormula {
        quantifier: Forall,
        bound: FofVariableList(
            [
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ],
        ),
        formula: Unitary(
            Atomic(
                Defined(
                    Plain(
                        FofDefinedPlainFormula(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
